--- a/Styles.css
+++ b/Styles.css
@@ -10,21 +10,7 @@ body {
     margin: 0 auto;
     padding: 0 15px;
 }
-@media (max-width: 1435px) {
-    .container{
-        max-width: 970px;
-    }
-}
-@media (max-width: 992px) {
-    .container{
-        max-width: 750px;
-    }
-}
-@media (max-width: 767px) {
-    .container{
-        max-width: none;
-    }
-}
+
 .first {
      padding-top: 103px;
      letter-spacing: 4px;
@@ -53,27 +39,7 @@ p {
      box-sizing: border-box;
      padding: 0 173px 0 212px;
 }
-@media (max-width: 992px) {
-    .header-wrapper{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-bottom: 78px;
-        box-sizing: border-box;
-        padding: 0 173px 0 212px;
-    }
-}
-@media (max-width: 640px) {
-    .header-wrapper{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        margin-bottom: 78px;
-        box-sizing: border-box;
-        padding: 0 50px 0 50px;
-    }
-}
+
 .header-logo {
     padding: 60px 0 48px 0;
 }
@@ -95,15 +61,6 @@ p {
     font-size: 16px;
     padding: 10px 17px 9px 17px;
 }
-@media (max-width: 640px) {
-    .header-list a {
-        letter-spacing: 0.3px;
-        text-decoration: none;
-        color: white;
-        font-size: 12px;
-        padding: 3px 3px;
-    }
-}
 .header-list a:hover {
     text-decoration: none;
     background: #643A79;
@@ -117,6 +74,7 @@ p {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 166px;
 }
 .header-content {
     text-align: center;
@@ -127,40 +85,11 @@ p {
     line-height: 49px;
     margin-bottom: 75px;
 }
-@media (max-width: 992px) {
-    .header-content{
-        text-align: center;
-        color: white;
-        font-size: 15px;
-        font-weight: bold;
-        letter-spacing: 1.2px;
-        line-height: 49px;
-        margin-bottom: 75px;
-    }
-}
-@media (max-width: 660px) {
-    .header-content{
-        text-align: center;
-        color: white;
-        font-size: 12px;
-        font-weight: bold;
-        letter-spacing: 1.2px;
-        line-height: 35px;
-        margin-bottom: 75px;
-    }
-}
 .header-content h1 {
     margin: 0;
 }
-.header-button {
-    margin-bottom: 166px;
-}
-@media (max-width: 660px) {
-    .header-button{
-        margin-bottom: 75px;
-    }
-}
 a.welcom-button {
+    display: block;
     font-weight: bolder;
     color: white;
     font-size: 18px;
@@ -170,19 +99,6 @@ a.welcom-button {
     background: rgb(255,156,8);
     box-shadow: 0 -3px rgb(201,123,6) inset;
     transition: 0.2s;
-}
-@media (max-width: 640px) {
-    a.welcom-button {
-        font-weight: bolder;
-        color: white;
-        font-size: 12px;
-        text-decoration: none;
-        padding: 11px 25px;
-        border-radius: 3px;
-        background: rgb(255,156,8);
-        box-shadow: 0 -3px rgb(201,123,6) inset;
-        transition: 0.2s;
-    }
 }
 a.welcom-button:hover { background: rgb(201,123,6); }
 a.welcom-button:active {
@@ -202,50 +118,16 @@ a.welcom-button:active {
     box-sizing: border-box;
     padding: 0 171px 117px;
 }
-@media (max-width: 992px) {
-    .sv-items {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        box-sizing: border-box;
-        padding: 0 50px 117px;
-    }
-}
-@media (max-width: 660px) {
-    .sv-items {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        box-sizing: border-box;
-        padding: 0 35px 55px;
-    }
-}
 .sv-items div {
     max-width: 260px;
     color: white;
     text-align: center;
-}
-@media (max-width: 660px) {
-    .sv-items div {
-        max-width: 260px;
-        color: white;
-        text-align: center;
-        margin-bottom: 26px;
-    }
 }
 .sv-title {
     font-size: 22px;
     font-weight: bold;
     padding-top: 48px;
     letter-spacing: 1.2px;
-}
-@media (max-width: 660px) {
-    .sv-title {
-        font-size: 22px;
-        font-weight: bold;
-        padding-top: 20px;
-        letter-spacing: 1.2px;
-    }
 }
 .sv-list h4 {
     font-size: 16px;
@@ -261,15 +143,6 @@ a.welcom-button:active {
     flex-wrap: wrap;
     justify-content: center;
     padding-bottom: 119px;
-}
-@media (max-width: 1440px) {
-    .tm-items {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        box-sizing: border-box;
-        padding: 0 80px 119px;
-    }
 }
 .tm-items div {
     color: black;
@@ -362,11 +235,6 @@ a.welcom-button:active {
 .tabs_block {
     padding-top: 62px;
 }
-@media (max-width: 660px) {
-    .tabs_block img {
-        width: 100%;
-    }
-}
 .tabs_block img:nth-child(1) {
     padding: 0 16px 53px 0;
 }
@@ -392,19 +260,6 @@ a.welcom-button:active {
     box-shadow: 0 -3px rgb(14,125,106) inset;
     transition: 0.2s;
 }
-@media (max-width: 660px) {
-    .pf-button {
-        font-weight: bolder;
-        color: white;
-        font-size: 12px;
-        text-decoration: none;
-        padding: 11px 25px;
-        border-radius: 3px;
-        background: rgb(23,194,164);
-        box-shadow: 0 -3px rgb(14,125,106) inset;
-        transition: 0.2s;
-    }
-}
 .pf-button:hover { background: rgb(14,125,106); }
 .pf-button:active {
     background: rgb(11, 93, 78);
@@ -421,41 +276,16 @@ a.welcom-button:active {
     display: flex;
     margin-bottom: 111px;
 }
-@media (max-width: 660px) {
-    .us-item {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin-bottom: 40px;
-    }
-}
 .comment {
     margin-left: 49px;
 }
-@media (max-width: 660px) {
-    .comment {
-        margin-left: 0;
-    }
-}
 .comment p {
     text-align: start;
-}
-@media (max-width: 660px) {
-    .comment p {
-        text-align: center;
-    }
 }
 .text {
     font-size: 21px;
     font-style: italic;
     margin-bottom: 18px;
-}
-@media (max-width: 660px) {
-    .text {
-        font-size: 15px;
-        font-style: italic;
-        margin-bottom: 18px;
-    }
 }
 .name {
     font-size: 24px;
@@ -472,15 +302,6 @@ p.posit {
     box-sizing: border-box;
     padding: 0 130px 89px 170px;
     justify-content: space-between;
-}
-@media (max-width: 992px) {
-    .us-list {
-        display: flex;
-        flex-direction: column;
-        box-sizing: border-box;
-        padding: 0 35px 50px;
-        align-items: center;
-    }
 }
 .main-ms {
     background: #3C5499;
@@ -503,16 +324,6 @@ p.posit {
     box-sizing: border-box;
     padding: 12px;
 }
-.
-@media (max-width: 1440px) {
-    .form {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        box-sizing: border-box;
-        padding: 12px 35px 0;
-    }
-}
 ::placeholder {
     color: white;
     font-size: 18px;
@@ -527,57 +338,17 @@ p.posit {
 .name_ms, .email_ms {
     width: 386px;
 }
-@media (max-width: 660px) {
-    .name_ms, .email_ms {
-        width: 220px;
-    }
-}
-
 .name_ms {
     margin-right: 32px;
 }
-@media (max-width: 992px) {
-    .name_ms {
-        margin: 0 0 26px;
-    }
-}
-
 .text-ar {
     margin-top: 26px;
     width: 834px;
-}
-@media (max-width: 992px) {
-    .text-ar {
-        margin-top: 16px;
-        width: 386px;
-    }
-
-}
-@media (max-width: 660px) {
-    .text-ar {
-        margin-top: 16px;
-        width: 220px;
-    }
 }
 .Message-button {
     text-align: center;
     margin: auto;
     padding: 91px 0 136px;
-}
-@media (max-width: 992px) {
-    .Message-button {
-        text-align: center;
-        margin: auto;
-        padding: 70px 0 90px;
-    }
-
-}
-@media (max-width: 660px) {
-    .Message-button {
-        text-align: center;
-        margin: auto;
-        padding: 70px 0 70px;
-    }
 }
 .ms-button {
     font-weight: bolder;
@@ -589,19 +360,6 @@ p.posit {
     background: #30BAE7;
     box-shadow: 0 -3px #2588A8 inset;
     transition: 0.2s;
-}
-@media (max-width: 660px) {
-    .ms-button {
-        font-weight: bolder;
-        color: white;
-        font-size: 12px;
-        text-decoration: none;
-        padding: 11px 25px;
-        border-radius: 3px;
-        background: #30BAE7;
-        box-shadow: 0 -3px #2588A8 inset;
-        transition: 0.2s;
-    }
 }
 .ms-button:hover { background: #2588A8; }
 .ms-button:active {
@@ -620,7 +378,34 @@ p.posit {
     padding: 0 250px 0;
     margin: 0;
 }
+.f-list a {
+     color: white;
+     font-size: 24px;
+     font-weight: bolder;
+     text-decoration: none;
+}
+.f-list a:hover {
+    text-decoration: none;
+    color: #30BAE7;
+}
+.f-list li {
+    margin: 37px 0;
+}
 @media (max-width: 1440px) {
+    .form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        box-sizing: border-box;
+        padding: 12px 35px 0;
+    }
+    .tm-items {
+         display: flex;
+         flex-wrap: wrap;
+         justify-content: center;
+         box-sizing: border-box;
+         padding: 0 80px 119px;
+     }
     .f-list {
         list-style: none;
         display: flex;
@@ -631,7 +416,58 @@ p.posit {
         margin: 0;
     }
 }
+@media (max-width: 1435px) {
+    .container{
+        max-width: 970px;
+    }
+}
 @media (max-width: 992px) {
+    .container{
+        max-width: 750px;
+    }
+    .header-wrapper{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 78px;
+        box-sizing: border-box;
+        padding: 0 173px 0 212px;
+    }
+    .header-content{
+        text-align: center;
+        color: white;
+        font-size: 15px;
+        font-weight: bold;
+        letter-spacing: 1.2px;
+        line-height: 49px;
+        margin-bottom: 75px;
+    }
+    .sv-items {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        box-sizing: border-box;
+        padding: 0 50px 117px;
+    }
+    .us-list {
+        display: flex;
+        flex-direction: column;
+        box-sizing: border-box;
+        padding: 0 35px 50px;
+        align-items: center;
+    }
+    .name_ms {
+        margin: 0 0 26px;
+    }
+    .text-ar {
+        margin-top: 16px;
+        width: 386px;
+    }
+    .Message-button {
+        text-align: center;
+        margin: auto;
+        padding: 70px 0 90px;
+    }
     .f-list {
         list-style: none;
         display: flex;
@@ -641,8 +477,115 @@ p.posit {
         padding: 0px 20px 0;
         margin: 0;
     }
+    .f-list a {
+        color: white;
+        font-size: 15px;
+        font-weight: bolder;
+        text-decoration: none;
+    }
+    .f-list li {
+        margin: 20px 0;
+    }
 }
+@media (max-width: 767px) {
+    .container{
+        max-width: none;
+    }
+}
+
 @media (max-width: 660px) {
+    .header-content{
+        text-align: center;
+        color: white;
+        font-size: 12px;
+        font-weight: bold;
+        letter-spacing: 1.2px;
+        line-height: 35px;
+        margin-bottom: 75px;
+    }
+    .header-list a {
+         letter-spacing: 0.3px;
+         text-decoration: none;
+         color: white;
+         font-size: 12px;
+         padding: 3px 3px;
+     }
+    .header-button{
+        margin-bottom: 75px;
+    }
+    .sv-items {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        box-sizing: border-box;
+        padding: 0 35px 55px;
+    }
+    .sv-items div {
+        max-width: 260px;
+        color: white;
+        text-align: center;
+        margin-bottom: 26px;
+    }
+    .sv-title {
+        font-size: 22px;
+        font-weight: bold;
+        padding-top: 20px;
+        letter-spacing: 1.2px;
+    }
+    .tabs_block img {
+        width: 100%;
+    }
+    .pf-button {
+        font-weight: bolder;
+        color: white;
+        font-size: 12px;
+        text-decoration: none;
+        padding: 11px 25px;
+        border-radius: 3px;
+        background: rgb(23,194,164);
+        box-shadow: 0 -3px rgb(14,125,106) inset;
+        transition: 0.2s;
+    }
+    .us-item {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 40px;
+    }
+    .comment {
+        margin-left: 0;
+    }
+    .comment p {
+        text-align: center;
+    }
+    .text {
+        font-size: 15px;
+        font-style: italic;
+        margin-bottom: 18px;
+    }
+    .name_ms, .email_ms {
+        width: 220px;
+    }
+    .text-ar {
+        margin-top: 16px;
+        width: 220px;
+    }
+    .Message-button {
+        text-align: center;
+        margin: auto;
+        padding: 70px 0 70px;
+    }
+    .ms-button {
+        font-weight: bolder;
+        color: white;
+        font-size: 12px;
+        text-decoration: none;
+        padding: 11px 25px;
+        border-radius: 3px;
+        background: #30BAE7;
+        box-shadow: 0 -3px #2588A8 inset;
+        transition: 0.2s;
+    }
     .f-list {
         list-style: none;
         display: flex;
@@ -652,43 +595,36 @@ p.posit {
         padding: 0 5px 0;
         margin: 0;
     }
-}
-.f-list a {
-     color: white;
-     font-size: 24px;
-     font-weight: bolder;
-     text-decoration: none;
-}
-@media (max-width: 992px) {
-    .f-list a {
-        color: white;
-        font-size: 15px;
-        font-weight: bolder;
-        text-decoration: none;
-    }
-}
-@media (max-width: 660px) {
     .f-list a {
         color: white;
         font-size: 9px;
         font-weight: bolder;
         text-decoration: none;
     }
-}
-.f-list a:hover {
-    text-decoration: none;
-    color: #30BAE7;
-}
-.f-list li {
-    margin: 37px 0;
-}
-@media (max-width: 992px) {
-    .f-list li {
-        margin: 20px 0;
-    }
-}
-@media (max-width: 660px) {
     .f-list li {
         margin: 10px 0;
     }
+}
+@media (max-width: 640px) {
+    .header-wrapper{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 78px;
+        box-sizing: border-box;
+        padding: 0 50px 0 50px;
+    }
+    a.welcom-button {
+        font-weight: bolder;
+        color: white;
+        font-size: 12px;
+        text-decoration: none;
+        padding: 11px 25px;
+        border-radius: 3px;
+        background: rgb(255,156,8);
+        box-shadow: 0 -3px rgb(201,123,6) inset;
+        transition: 0.2s;
+    }
+
 }
